src/prebuilt/wast-parser-gen.output
Grammar

    0 $accept: script_start "EOF"

    1 text_list: TEXT
    2          | text_list TEXT

    3 text_list_opt: %empty
    4              | text_list

    5 quoted_text: TEXT

    6 value_type_list: %empty
    7                | value_type_list VALUE_TYPE

    8 elem_type: ANYFUNC

    9 global_type: VALUE_TYPE
   10            | "(" MUT VALUE_TYPE ")"

   11 func_type: "(" FUNC func_sig ")"

   12 func_sig: func_sig_result
   13         | "(" PARAM value_type_list ")" func_sig
   14         | "(" PARAM bind_var VALUE_TYPE ")" func_sig

   15 func_sig_result: %empty
   16                | "(" RESULT value_type_list ")" func_sig_result

   17 table_sig: limits elem_type

   18 memory_sig: limits

   19 limits: nat
   20       | nat nat

   21 type_use: "(" TYPE var ")"

   22 nat: NAT

   23 literal: NAT
   24        | INT
   25        | FLOAT

   26 var: nat
   27    | VAR

   28 var_list: %empty
   29         | var_list var

   30 bind_var_opt: %empty
   31             | bind_var

   32 bind_var: VAR

   33 labeling_opt: %empty
   34             | bind_var

   35 offset_opt: %empty
   36           | OFFSET_EQ_NAT

   37 align_opt: %empty
   38          | ALIGN_EQ_NAT

   39 instr: plain_instr
   40      | block_instr
   41      | expr

   42 plain_instr: UNREACHABLE
   43            | NOP
   44            | DROP
   45            | SELECT
   46            | BR var
   47            | BR_IF var
   48            | BR_TABLE var_list var
   49            | RETURN
   50            | CALL var
   51            | CALL_INDIRECT var
   52            | GET_LOCAL var
   53            | SET_LOCAL var
   54            | TEE_LOCAL var
   55            | GET_GLOBAL var
   56            | SET_GLOBAL var
   57            | LOAD offset_opt align_opt
   58            | STORE offset_opt align_opt
   59            | CONST literal
   60            | UNARY
   61            | BINARY
   62            | COMPARE
   63            | CONVERT
   64            | CURRENT_MEMORY
   65            | GROW_MEMORY
   66            | throw_check var
   67            | rethrow_check var

   68 block_instr: BLOCK labeling_opt block END labeling_opt
   69            | LOOP labeling_opt block END labeling_opt
   70            | IF labeling_opt block END labeling_opt
   71            | IF labeling_opt block ELSE labeling_opt instr_list END labeling_opt
   72            | try_check labeling_opt block catch_instr_list END labeling_opt

   73 block_sig: "(" RESULT value_type_list ")"

   74 block: block_sig block
   75      | instr_list

   76 catch_instr: CATCH var instr_list
   77            | CATCH_ALL instr_list

   78 catch_instr_list: catch_instr
   79                 | catch_instr catch_instr_list

   80 expr: "(" expr1 ")"

   81 expr1: plain_instr expr_list
   82      | BLOCK labeling_opt block
   83      | LOOP labeling_opt block
   84      | IF labeling_opt if_block
   85      | try_check labeling_opt "(" BLOCK block ")" catch_list

   86 catch_list: "(" catch_instr ")"
   87           | "(" catch_instr ")" catch_list

   88 if_block: block_sig if_block
   89         | if_

   90 if_: "(" THEN instr_list ")" "(" ELSE instr_list ")"
   91    | "(" THEN instr_list ")"
   92    | expr "(" THEN instr_list ")" "(" ELSE instr_list ")"
   93    | expr "(" THEN instr_list ")"
   94    | expr expr expr
   95    | expr expr

   96 rethrow_check: RETHROW

   97 throw_check: THROW

   98 try_check: TRY

   99 instr_list: %empty
  100           | instr instr_list

  101 expr_list: %empty
  102          | expr expr_list

  103 const_expr: instr_list

  104 exception: "(" EXCEPT bind_var_opt value_type_list ")"

  105 exception_field: exception

  106 func: "(" FUNC bind_var_opt func_fields ")"

  107 func_fields: type_use func_fields_body
  108            | func_fields_body
  109            | inline_import type_use func_fields_import
  110            | inline_import func_fields_import
  111            | inline_export func_fields

  112 func_fields_import: func_fields_import1

  113 func_fields_import1: func_fields_import_result
  114                    | "(" PARAM value_type_list ")" func_fields_import1
  115                    | "(" PARAM bind_var VALUE_TYPE ")" func_fields_import1

  116 func_fields_import_result: %empty
  117                          | "(" RESULT value_type_list ")" func_fields_import_result

  118 func_fields_body: func_fields_body1

  119 func_fields_body1: func_result_body
  120                  | "(" PARAM value_type_list ")" func_fields_body1
  121                  | "(" PARAM bind_var VALUE_TYPE ")" func_fields_body1

  122 func_result_body: func_body
  123                 | "(" RESULT value_type_list ")" func_result_body

  124 func_body: func_body1

  125 func_body1: instr_list
  126           | "(" LOCAL value_type_list ")" func_body1
  127           | "(" LOCAL bind_var VALUE_TYPE ")" func_body1

  128 offset: "(" OFFSET const_expr ")"
  129       | expr

  130 elem: "(" ELEM var offset var_list ")"
  131     | "(" ELEM offset var_list ")"

  132 table: "(" TABLE bind_var_opt table_fields ")"

  133 table_fields: table_sig
  134             | inline_import table_sig
  135             | inline_export table_fields
  136             | elem_type "(" ELEM var_list ")"

  137 data: "(" DATA var offset text_list_opt ")"
  138     | "(" DATA offset text_list_opt ")"

  139 memory: "(" MEMORY bind_var_opt memory_fields ")"

  140 memory_fields: memory_sig
  141              | inline_import memory_sig
  142              | inline_export memory_fields
  143              | "(" DATA text_list_opt ")"

  144 global: "(" GLOBAL bind_var_opt global_fields ")"

  145 global_fields: global_type const_expr
  146              | inline_import global_type
  147              | inline_export global_fields

  148 import_desc: "(" FUNC bind_var_opt type_use ")"
  149            | "(" FUNC bind_var_opt func_sig ")"
  150            | "(" TABLE bind_var_opt table_sig ")"
  151            | "(" MEMORY bind_var_opt memory_sig ")"
  152            | "(" GLOBAL bind_var_opt global_type ")"
  153            | exception

  154 import: "(" IMPORT quoted_text quoted_text import_desc ")"

  155 inline_import: "(" IMPORT quoted_text quoted_text ")"

  156 export_desc: "(" FUNC var ")"
  157            | "(" TABLE var ")"
  158            | "(" MEMORY var ")"
  159            | "(" GLOBAL var ")"
  160            | "(" EXCEPT var ")"

  161 export: "(" EXPORT quoted_text export_desc ")"

  162 inline_export: "(" EXPORT quoted_text ")"

  163 type_def: "(" TYPE func_type ")"
  164         | "(" TYPE bind_var func_type ")"

  165 start: "(" START var ")"

  166 module_field: type_def
  167             | global
  168             | table
  169             | memory
  170             | func
  171             | elem
  172             | data
  173             | start
  174             | import
  175             | export
  176             | exception_field

  177 module_fields_opt: %empty
  178                  | module_fields

  179 module_fields: module_field
  180              | module_fields module_field

  181 module: script_module

  182 inline_module: module_fields

  183 script_var_opt: %empty
  184               | VAR

  185 script_module: "(" MODULE bind_var_opt module_fields_opt ")"
  186              | "(" MODULE bind_var_opt BIN text_list ")"
  187              | "(" MODULE bind_var_opt QUOTE text_list ")"

  188 action: "(" INVOKE script_var_opt quoted_text const_list ")"
  189       | "(" GET script_var_opt quoted_text ")"

  190 assertion: "(" ASSERT_MALFORMED script_module quoted_text ")"
  191          | "(" ASSERT_INVALID script_module quoted_text ")"
  192          | "(" ASSERT_UNLINKABLE script_module quoted_text ")"
  193          | "(" ASSERT_TRAP script_module quoted_text ")"
  194          | "(" ASSERT_RETURN action const_list ")"
  195          | "(" ASSERT_RETURN_CANONICAL_NAN action ")"
  196          | "(" ASSERT_RETURN_ARITHMETIC_NAN action ")"
  197          | "(" ASSERT_TRAP action quoted_text ")"
  198          | "(" ASSERT_EXHAUSTION action quoted_text ")"

  199 cmd: action
  200    | assertion
  201    | module
  202    | "(" REGISTER quoted_text script_var_opt ")"

  203 cmd_list: cmd
  204         | cmd_list cmd

  205 const: "(" CONST literal ")"

  206 const_list: %empty
  207           | const_list const

  208 script: %empty
  209       | cmd_list
  210       | inline_module

  211 script_start: script


Terminals, with rules where they appear

"EOF" (0) 0
error (256)
"(" (258) 10 11 13 14 16 21 73 80 85 86 87 90 91 92 93 104 106 114
    115 117 120 121 123 126 127 128 130 131 132 136 137 138 139 143
    144 148 149 150 151 152 154 155 156 157 158 159 160 161 162 163
    164 165 185 186 187 188 189 190 191 192 193 194 195 196 197 198
    202 205
")" (259) 10 11 13 14 16 21 73 80 85 86 87 90 91 92 93 104 106 114
    115 117 120 121 123 126 127 128 130 131 132 136 137 138 139 143
    144 148 149 150 151 152 154 155 156 157 158 159 160 161 162 163
    164 165 185 186 187 188 189 190 191 192 193 194 195 196 197 198
    202 205
NAT (260) 22 23
INT (261) 24
FLOAT (262) 25
TEXT (263) 1 2 5
VAR (264) 27 32 184
VALUE_TYPE (265) 7 9 10 14 115 121 127
ANYFUNC (266) 8
MUT (267) 10
NOP (268) 43
DROP (269) 44
BLOCK (270) 68 82 85
END (271) 68 69 70 71 72
IF (272) 70 71 84
THEN (273) 90 91 92 93
ELSE (274) 71 90 92
LOOP (275) 69 83
BR (276) 46
BR_IF (277) 47
BR_TABLE (278) 48
TRY (279) 98
CATCH (280) 76
CATCH_ALL (281) 77
THROW (282) 97
RETHROW (283) 96
CALL (284) 50
CALL_INDIRECT (285) 51
RETURN (286) 49
GET_LOCAL (287) 52
SET_LOCAL (288) 53
TEE_LOCAL (289) 54
GET_GLOBAL (290) 55
SET_GLOBAL (291) 56
LOAD (292) 57
STORE (293) 58
OFFSET_EQ_NAT (294) 36
ALIGN_EQ_NAT (295) 38
CONST (296) 59 205
UNARY (297) 60
BINARY (298) 61
COMPARE (299) 62
CONVERT (300) 63
SELECT (301) 45
UNREACHABLE (302) 42
CURRENT_MEMORY (303) 64
GROW_MEMORY (304) 65
FUNC (305) 11 106 148 149 156
START (306) 165
TYPE (307) 21 163 164
PARAM (308) 13 14 114 115 120 121
RESULT (309) 16 73 117 123
LOCAL (310) 126 127
GLOBAL (311) 144 152 159
TABLE (312) 132 150 157
ELEM (313) 130 131 136
MEMORY (314) 139 151 158
DATA (315) 137 138 143
OFFSET (316) 128
IMPORT (317) 154 155
EXPORT (318) 161 162
EXCEPT (319) 104 160
MODULE (320) 185 186 187
BIN (321) 186
QUOTE (322) 187
REGISTER (323) 202
INVOKE (324) 188
GET (325) 189
ASSERT_MALFORMED (326) 190
ASSERT_INVALID (327) 191
ASSERT_UNLINKABLE (328) 192
ASSERT_RETURN (329) 194
ASSERT_RETURN_CANONICAL_NAN (330) 195
ASSERT_RETURN_ARITHMETIC_NAN (331) 196
ASSERT_TRAP (332) 193 197
ASSERT_EXHAUSTION (333) 198
LOW (334)


Nonterminals, with rules where they appear

$accept (80)
    on left: 0
text_list (81)
    on left: 1 2, on right: 2 4 186 187
text_list_opt (82)
    on left: 3 4, on right: 137 138 143
quoted_text (83)
    on left: 5, on right: 154 155 161 162 188 189 190 191 192 193 197
    198 202
value_type_list (84)
    on left: 6 7, on right: 7 13 16 73 104 114 117 120 123 126
elem_type (85)
    on left: 8, on right: 17 136
global_type (86)
    on left: 9 10, on right: 145 146 152
func_type (87)
    on left: 11, on right: 163 164
func_sig (88)
    on left: 12 13 14, on right: 11 13 14 149
func_sig_result (89)
    on left: 15 16, on right: 12 16
table_sig (90)
    on left: 17, on right: 133 134 150
memory_sig (91)
    on left: 18, on right: 140 141 151
limits (92)
    on left: 19 20, on right: 17 18
type_use (93)
    on left: 21, on right: 107 109 148
nat (94)
    on left: 22, on right: 19 20 26
literal (95)
    on left: 23 24 25, on right: 59 205
var (96)
    on left: 26 27, on right: 21 29 46 47 48 50 51 52 53 54 55 56 66
    67 76 130 137 156 157 158 159 160 165
var_list (97)
    on left: 28 29, on right: 29 48 130 131 136
bind_var_opt (98)
    on left: 30 31, on right: 104 106 132 139 144 148 149 150 151 152
    185 186 187
bind_var (99)
    on left: 32, on right: 14 31 34 115 121 127 164
labeling_opt (100)
    on left: 33 34, on right: 68 69 70 71 72 82 83 84 85
offset_opt (101)
    on left: 35 36, on right: 57 58
align_opt (102)
    on left: 37 38, on right: 57 58
instr (103)
    on left: 39 40 41, on right: 100
plain_instr (104)
    on left: 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59
    60 61 62 63 64 65 66 67, on right: 39 81
block_instr (105)
    on left: 68 69 70 71 72, on right: 40
block_sig (106)
    on left: 73, on right: 74 88
block (107)
    on left: 74 75, on right: 68 69 70 71 72 74 82 83 85
catch_instr (108)
    on left: 76 77, on right: 78 79 86 87
catch_instr_list (109)
    on left: 78 79, on right: 72 79
expr (110)
    on left: 80, on right: 41 92 93 94 95 102 129
expr1 (111)
    on left: 81 82 83 84 85, on right: 80
catch_list (112)
    on left: 86 87, on right: 85 87
if_block (113)
    on left: 88 89, on right: 84 88
if_ (114)
    on left: 90 91 92 93 94 95, on right: 89
rethrow_check (115)
    on left: 96, on right: 67
throw_check (116)
    on left: 97, on right: 66
try_check (117)
    on left: 98, on right: 72 85
instr_list (118)
    on left: 99 100, on right: 71 75 76 77 90 91 92 93 100 103 125
expr_list (119)
    on left: 101 102, on right: 81 102
const_expr (120)
    on left: 103, on right: 128 145
exception (121)
    on left: 104, on right: 105 153
exception_field (122)
    on left: 105, on right: 176
func (123)
    on left: 106, on right: 170
func_fields (124)
    on left: 107 108 109 110 111, on right: 106 111
func_fields_import (125)
    on left: 112, on right: 109 110
func_fields_import1 (126)
    on left: 113 114 115, on right: 112 114 115
func_fields_import_result (127)
    on left: 116 117, on right: 113 117
func_fields_body (128)
    on left: 118, on right: 107 108
func_fields_body1 (129)
    on left: 119 120 121, on right: 118 120 121
func_result_body (130)
    on left: 122 123, on right: 119 123
func_body (131)
    on left: 124, on right: 122
func_body1 (132)
    on left: 125 126 127, on right: 124 126 127
offset (133)
    on left: 128 129, on right: 130 131 137 138
elem (134)
    on left: 130 131, on right: 171
table (135)
    on left: 132, on right: 168
table_fields (136)
    on left: 133 134 135 136, on right: 132 135
data (137)
    on left: 137 138, on right: 172
memory (138)
    on left: 139, on right: 169
memory_fields (139)
    on left: 140 141 142 143, on right: 139 142
global (140)
    on left: 144, on right: 167
global_fields (141)
    on left: 145 146 147, on right: 144 147
import_desc (142)
    on left: 148 149 150 151 152 153, on right: 154
import (143)
    on left: 154, on right: 174
inline_import (144)
    on left: 155, on right: 109 110 134 141 146
export_desc (145)
    on left: 156 157 158 159 160, on right: 161
export (146)
    on left: 161, on right: 175
inline_export (147)
    on left: 162, on right: 111 135 142 147
type_def (148)
    on left: 163 164, on right: 166
start (149)
    on left: 165, on right: 173
module_field (150)
    on left: 166 167 168 169 170 171 172 173 174 175 176, on right:
    179 180
module_fields_opt (151)
    on left: 177 178, on right: 185
module_fields (152)
    on left: 179 180, on right: 178 180 182
module (153)
    on left: 181, on right: 201
inline_module (154)
    on left: 182, on right: 210
script_var_opt (155)
    on left: 183 184, on right: 188 189 202
script_module (156)
    on left: 185 186 187, on right: 181 190 191 192 193
action (157)
    on left: 188 189, on right: 194 195 196 197 198 199
assertion (158)
    on left: 190 191 192 193 194 195 196 197 198, on right: 200
cmd (159)
    on left: 199 200 201 202, on right: 203 204
cmd_list (160)
    on left: 203 204, on right: 204 209
const (161)
    on left: 205, on right: 207
const_list (162)
    on left: 206 207, on right: 188 194 207
script (163)
    on left: 208 209 210, on right: 211
script_start (164)
    on left: 211, on right: 0


State 0

    0 $accept: . script_start "EOF"

    "("  shift, and go to state 1

    $default  reduce using rule 208 (script)

    exception        go to state 2
    exception_field  go to state 3
    func             go to state 4
    elem             go to state 5
    table            go to state 6
    data             go to state 7
    memory           go to state 8
    global           go to state 9
    import           go to state 10
    export           go to state 11
    type_def         go to state 12
    start            go to state 13
    module_field     go to state 14
    module_fields    go to state 15
    module           go to state 16
    inline_module    go to state 17
    script_module    go to state 18
    action           go to state 19
    assertion        go to state 20
    cmd              go to state 21
    cmd_list         go to state 22
    script           go to state 23
    script_start     go to state 24


State 1

  104 exception: "(" . EXCEPT bind_var_opt value_type_list ")"
  106 func: "(" . FUNC bind_var_opt func_fields ")"
  130 elem: "(" . ELEM var offset var_list ")"
  131     | "(" . ELEM offset var_list ")"
  132 table: "(" . TABLE bind_var_opt table_fields ")"
  137 data: "(" . DATA var offset text_list_opt ")"
  138     | "(" . DATA offset text_list_opt ")"
  139 memory: "(" . MEMORY bind_var_opt memory_fields ")"
  144 global: "(" . GLOBAL bind_var_opt global_fields ")"
  154 import: "(" . IMPORT quoted_text quoted_text import_desc ")"
  161 export: "(" . EXPORT quoted_text export_desc ")"
  163 type_def: "(" . TYPE func_type ")"
  164         | "(" . TYPE bind_var func_type ")"
  165 start: "(" . START var ")"
  185 script_module: "(" . MODULE bind_var_opt module_fields_opt ")"
  186              | "(" . MODULE bind_var_opt BIN text_list ")"
  187              | "(" . MODULE bind_var_opt QUOTE text_list ")"
  188 action: "(" . INVOKE script_var_opt quoted_text const_list ")"
  189       | "(" . GET script_var_opt quoted_text ")"
  190 assertion: "(" . ASSERT_MALFORMED script_module quoted_text ")"
  191          | "(" . ASSERT_INVALID script_module quoted_text ")"
  192          | "(" . ASSERT_UNLINKABLE script_module quoted_text ")"
  193          | "(" . ASSERT_TRAP script_module quoted_text ")"
  194          | "(" . ASSERT_RETURN action const_list ")"
  195          | "(" . ASSERT_RETURN_CANONICAL_NAN action ")"
  196          | "(" . ASSERT_RETURN_ARITHMETIC_NAN action ")"
  197          | "(" . ASSERT_TRAP action quoted_text ")"
  198          | "(" . ASSERT_EXHAUSTION action quoted_text ")"
  202 cmd: "(" . REGISTER quoted_text script_var_opt ")"

    FUNC                          shift, and go to state 25
    START                         shift, and go to state 26
    TYPE                          shift, and go to state 27
    GLOBAL                        shift, and go to state 28
    TABLE                         shift, and go to state 29
    ELEM                          shift, and go to state 30
    MEMORY                        shift, and go to state 31
    DATA                          shift, and go to state 32
    IMPORT                        shift, and go to state 33
    EXPORT                        shift, and go to state 34
    EXCEPT                        shift, and go to state 35
    MODULE                        shift, and go to state 36
    REGISTER                      shift, and go to state 37
    INVOKE                        shift, and go to state 38
    GET                           shift, and go to state 39
    ASSERT_MALFORMED              shift, and go to state 40
    ASSERT_INVALID                shift, and go to state 41
    ASSERT_UNLINKABLE             shift, and go to state 42
    ASSERT_RETURN                 shift, and go to state 43
    ASSERT_RETURN_CANONICAL_NAN   shift, and go to state 44
    ASSERT_RETURN_ARITHMETIC_NAN  shift, and go to state 45
    ASSERT_TRAP                   shift, and go to state 46
    ASSERT_EXHAUSTION             shift, and go to state 47


State 2

  105 exception_field: exception .

    $default  reduce using rule 105 (exception_field)


State 3

  176 module_field: exception_field .

    $default  reduce using rule 176 (module_field)


State 4

  170 module_field: func .

    $default  reduce using rule 170 (module_field)


State 5

  171 module_field: elem .

    $default  reduce using rule 171 (module_field)


State 6

  168 module_field: table .

    $default  reduce using rule 168 (module_field)


State 7

  172 module_field: data .

    $default  reduce using rule 172 (module_field)


State 8

  169 module_field: memory .

    $default  reduce using rule 169 (module_field)


State 9

  167 module_field: global .

    $default  reduce using rule 167 (module_field)


State 10

  174 module_field: import .

    $default  reduce using rule 174 (module_field)


State 11

  175 module_field: export .

    $default  reduce using rule 175 (module_field)


State 12

  166 module_field: type_def .

    $default  reduce using rule 166 (module_field)


State 13

  173 module_field: start .

    $default  reduce using rule 173 (module_field)


State 14

  179 module_fields: module_field .

    $default  reduce using rule 179 (module_fields)


State 15

  180 module_fields: module_fields . module_field
  182 inline_module: module_fields .

    "("  shift, and go to state 48

    $default  reduce using rule 182 (inline_module)

    exception        go to state 2
    exception_field  go to state 3
    func             go to state 4
    elem             go to state 5
    table            go to state 6
    data             go to state 7
    memory           go to state 8
    global           go to state 9
    import           go to state 10
    export           go to state 11
    type_def         go to state 12
    start            go to state 13
    module_field     go to state 49


State 16

  201 cmd: module .

    $default  reduce using rule 201 (cmd)


State 17

  210 script: inline_module .

    $default  reduce using rule 210 (script)


State 18

  181 module: script_module .

    $default  reduce using rule 181 (module)


State 19

  199 cmd: action .

    $default  reduce using rule 199 (cmd)


State 20

  200 cmd: assertion .

    $default  reduce using rule 200 (cmd)


State 21

  203 cmd_list: cmd .

    $default  reduce using rule 203 (cmd_list)


State 22

  204 cmd_list: cmd_list . cmd
  209 script: cmd_list .

    "("  shift, and go to state 50

    $default  reduce using rule 209 (script)

    module         go to state 16
    script_module  go to state 18
    action         go to state 19
    assertion      go to state 20
    cmd            go to state 51


State 23

  211 script_start: script .

    $default  reduce using rule 211 (script_start)


State 24

    0 $accept: script_start . "EOF"

    "EOF"  shift, and go to state 52


State 25

  106 func: "(" FUNC . bind_var_opt func_fields ")"

    VAR  shift, and go to state 53

    $default  reduce using rule 30 (bind_var_opt)

    bind_var_opt  go to state 54
    bind_var      go to state 55


State 26

  165 start: "(" START . var ")"

    NAT  shift, and go to state 56
    VAR  shift, and go to state 57

    nat  go to state 58
    var  go to state 59


State 27

  163 type_def: "(" TYPE . func_type ")"
  164         | "(" TYPE . bind_var func_type ")"

    "("  shift, and go to state 60
    VAR  shift, and go to state 53

    func_type  go to state 61
    bind_var   go to state 62


State 28

  144 global: "(" GLOBAL . bind_var_opt global_fields ")"

    VAR  shift, and go to state 53

    $default  reduce using rule 30 (bind_var_opt)

    bind_var_opt  go to state 63
    bind_var      go to state 55


State 29

  132 table: "(" TABLE . bind_var_opt table_fields ")"

    VAR  shift, and go to state 53

    $default  reduce using rule 30 (bind_var_opt)

    bind_var_opt  go to state 64
    bind_var      go to state 55


State 30

  130 elem: "(" ELEM . var offset var_list ")"
  131     | "(" ELEM . offset var_list ")"

    "("  shift, and go to state 65
    NAT  shift, and go to state 56
    VAR  shift, and go to state 57

    nat     go to state 58
    var     go to state 66
    expr    go to state 67
    offset  go to state 68


State 31

  139 memory: "(" MEMORY . bind_var_opt memory_fields ")"

    VAR  shift, and go to state 53

    $default  reduce using rule 30 (bind_var_opt)

    bind_var_opt  go to state 69
    bind_var      go to state 55


State 32

  137 data: "(" DATA . var offset text_list_opt ")"
  138     | "(" DATA . offset text_list_opt ")"

    "("  shift, and go to state 65
    NAT  shift, and go to state 56
    VAR  shift, and go to state 57

    nat     go to state 58
    var     go to state 70
    expr    go to state 67
    offset  go to state 71


State 33

  154 import: "(" IMPORT . quoted_text quoted_text import_desc ")"

    TEXT  shift, and go to state 72

    quoted_text  go to state 73


State 34

  161 export: "(" EXPORT . quoted_text export_desc ")"

    TEXT  shift, and go to state 72

    quoted_text  go to state 74


State 35

  104 exception: "(" EXCEPT . bind_var_opt value_type_list ")"

    VAR  shift, and go to state 53

    $default  reduce using rule 30 (bind_var_opt)

    bind_var_opt  go to state 75
    bind_var      go to state 55


State 36

  185 script_module: "(" MODULE . bind_var_opt module_fields_opt ")"
  186              | "(" MODULE . bind_var_opt BIN text_list ")"
  187              | "(" MODULE . bind_var_opt QUOTE text_list ")"

    VAR  shift, and go to state 53

    $default  reduce using rule 30 (bind_var_opt)

    bind_var_opt  go to state 76
    bind_var      go to state 55


State 37

  202 cmd: "(" REGISTER . quoted_text script_var_opt ")"

    TEXT  shift, and go to state 72

    quoted_text  go to state 77


State 38

  188 action: "(" INVOKE . script_var_opt quoted_text const_list ")"

    VAR  shift, and go to state 78

    $default  reduce using rule 183 (script_var_opt)

    script_var_opt  go to state 79


State 39

  189 action: "(" GET . script_var_opt quoted_text ")"

    VAR  shift, and go to state 78

    $default  reduce using rule 183 (script_var_opt)

    script_var_opt  go to state 80


State 40

  190 assertion: "(" ASSERT_MALFORMED . script_module quoted_text ")"

    "("  shift, and go to state 81

    script_module  go to state 82


State 41

  191 assertion: "(" ASSERT_INVALID . script_module quoted_text ")"

    "("  shift, and go to state 81

    script_module  go to state 83


State 42

  192 assertion: "(" ASSERT_UNLINKABLE . script_module quoted_text ")"

    "("  shift, and go to state 81

    script_module  go to state 84


State 43

  194 assertion: "(" ASSERT_RETURN . action const_list ")"

    "("  shift, and go to state 85

    action  go to state 86


State 44

  195 assertion: "(" ASSERT_RETURN_CANONICAL_NAN . action ")"

    "("  shift, and go to state 85

    action  go to state 87


State 45

  196 assertion: "(" ASSERT_RETURN_ARITHMETIC_NAN . action ")"

    "("  shift, and go to state 85

    action  go to state 88


State 46

  193 assertion: "(" ASSERT_TRAP . script_module quoted_text ")"
  197          | "(" ASSERT_TRAP . action quoted_text ")"

    "("  shift, and go to state 89

    script_module  go to state 90
    action         go to state 91


State 47

  198 assertion: "(" ASSERT_EXHAUSTION . action quoted_text ")"

    "("  shift, and go to state 85

    action  go to state 92


State 48

  104 exception: "(" . EXCEPT bind_var_opt value_type_list ")"
  106 func: "(" . FUNC bind_var_opt func_fields ")"
  130 elem: "(" . ELEM var offset var_list ")"
  131     | "(" . ELEM offset var_list ")"
  132 table: "(" . TABLE bind_var_opt table_fields ")"
  137 data: "(" . DATA var offset text_list_opt ")"
  138     | "(" . DATA offset text_list_opt ")"
  139 memory: "(" . MEMORY bind_var_opt memory_fields ")"
  144 global: "(" . GLOBAL bind_var_opt global_fields ")"
  154 import: "(" . IMPORT quoted_text quoted_text import_desc ")"
  161 export: "(" . EXPORT quoted_text export_desc ")"
  163 type_def: "(" . TYPE func_type ")"
  164         | "(" . TYPE bind_var func_type ")"
  165 start: "(" . START var ")"

    FUNC    shift, and go to state 25
    START   shift, and go to state 26
    TYPE    shift, and go to state 27
    GLOBAL  shift, and go to state 28
    TABLE   shift, and go to state 29
    ELEM    shift, and go to state 30
    MEMORY  shift, and go to state 31
    DATA    shift, and go to state 32
    IMPORT  shift, and go to state 33
    EXPORT  shift, and go to state 34
    EXCEPT  shift, and go to state 35


State 49

  180 module_fields: module_fields module_field .

    $default  reduce using rule 180 (module_fields)


State 50

  185 script_module: "(" . MODULE bind_var_opt module_fields_opt ")"
  186              | "(" . MODULE bind_var_opt BIN text_list ")"
  187              | "(" . MODULE bind_var_opt QUOTE text_list ")"
  188 action: "(" . INVOKE script_var_opt quoted_text const_list ")"
  189       | "(" . GET script_var_opt quoted_text ")"
  190 assertion: "(" . ASSERT_MALFORMED script_module quoted_text ")"
  191          | "(" . ASSERT_INVALID script_module quoted_text ")"
  192          | "(" . ASSERT_UNLINKABLE script_module quoted_text ")"
  193          | "(" . ASSERT_TRAP script_module quoted_text ")"
  194          | "(" . ASSERT_RETURN action const_list ")"
  195          | "(" . ASSERT_RETURN_CANONICAL_NAN action ")"
  196          | "(" . ASSERT_RETURN_ARITHMETIC_NAN action ")"
  197          | "(" . ASSERT_TRAP action quoted_text ")"
  198          | "(" . ASSERT_EXHAUSTION action quoted_text ")"
  202 cmd: "(" . REGISTER quoted_text script_var_opt ")"

    MODULE                        shift, and go to state 36
    REGISTER                      shift, and go to state 37
    INVOKE                        shift, and go to state 38
    GET                           shift, and go to state 39
    ASSERT_MALFORMED              shift, and go to state 40
    ASSERT_INVALID                shift, and go to state 41
    ASSERT_UNLINKABLE             shift, and go to state 42
    ASSERT_RETURN                 shift, and go to state 43
    ASSERT_RETURN_CANONICAL_NAN   shift, and go to state 44
    ASSERT_RETURN_ARITHMETIC_NAN  shift, and go to state 45
    ASSERT_TRAP                   shift, and go to state 46
    ASSERT_EXHAUSTION             shift, and go to state 47


State 51

  204 cmd_list: cmd_list cmd .

    $default  reduce using rule 204 (cmd_list)


State 52

    0 $accept: script_start "EOF" .

    $default  accept


State 53

   32 bind_var: VAR .

    $default  reduce using rule 32 (bind_var)


State 54

  106 func: "(" FUNC bind_var_opt . func_fields ")"

    "("             shift, and go to state 93
    NOP             shift, and go to state 94
    DROP            shift, and go to state 95
    BLOCK           shift, and go to state 96
    IF              shift, and go to state 97
    LOOP            shift, and go to state 98
    BR              shift, and go to state 99
    BR_IF           shift, and go to state 100
    BR_TABLE        shift, and go to state 101
    TRY             shift, and go to state 102
    THROW           shift, and go to state 103
    RETHROW         shift, and go to state 104
    CALL            shift, and go to state 105
    CALL_INDIRECT   shift, and go to state 106
    RETURN          shift, and go to state 107
    GET_LOCAL       shift, and go to state 108
    SET_LOCAL       shift, and go to state 109
    TEE_LOCAL       shift, and go to state 110
    GET_GLOBAL      shift, and go to state 111
    SET_GLOBAL      shift, and go to state 112
    LOAD            shift, and go to state 113
    STORE           shift, and go to state 114
    CONST           shift, and go to state 115
    UNARY           shift, and go to state 116
    BINARY          shift, and go to state 117
    COMPARE         shift, and go to state 118
    CONVERT         shift, and go to state 119
    SELECT          shift, and go to state 120
    UNREACHABLE     shift, and go to state 121
    CURRENT_MEMORY  shift, and go to state 122
    GROW_MEMORY     shift, and go to state 123

    $default  reduce using rule 99 (instr_list)

    type_use           go to state 124
    instr              go to state 125
    plain_instr        go to state 126
    block_instr        go to state 127
    expr               go to state 128
    rethrow_check      go to state 129
    throw_check        go to state 130
    try_check          go to state 131
    instr_list         go to state 132
    func_fields        go to state 133
    func_fields_body   go to state 134
    func_fields_body1  go to state 135
    func_result_body   go to state 136
    func_body          go to state 137
    func_body1         go to state 138
    inline_import      go to state 139
    inline_export      go to state 140


State 55

   31 bind_var_opt: bind_var .

    $default  reduce using rule 31 (bind_var_opt)


State 56

   22 nat: NAT .

    $default  reduce using rule 22 (nat)


State 57

   27 var: VAR .

    $default  reduce using rule 27 (var)


State 58

   26 var: nat .

    $default  reduce using rule 26 (var)


State 59

  165 start: "(" START var . ")"

    ")"  shift, and go to state 141


State 60

   11 func_type: "(" . FUNC func_sig ")"

    FUNC  shift, and go to state 142


State 61

  163 type_def: "(" TYPE func_type . ")"

    ")"  shift, and go to state 143


State 62

  164 type_def: "(" TYPE bind_var . func_type ")"

    "("  shift, and go to state 60

    func_type  go to state 144


State 63

  144 global: "(" GLOBAL bind_var_opt . global_fields ")"

    "("         shift, and go to state 145
    VALUE_TYPE  shift, and go to state 146

    global_type    go to state 147
    global_fields  go to state 148
    inline_import  go to state 149
    inline_export  go to state 150


State 64

  132 table: "(" TABLE bind_var_opt . table_fields ")"

    "("      shift, and go to state 151
    NAT      shift, and go to state 56
    ANYFUNC  shift, and go to state 152

    elem_type      go to state 153
    table_sig      go to state 154
    limits         go to state 155
    nat            go to state 156
    table_fields   go to state 157
    inline_import  go to state 158
    inline_export  go to state 159


State 65

   80 expr: "(" . expr1 ")"
  128 offset: "(" . OFFSET const_expr ")"
